# wallpaper-scraper

./: Cargo.toml  README.md
src/: main.rs  types.rs
