[package]
name = "wallpaper-scraper"
version = "0.1.0"
authors = ["JonasJore <jonas.jore@gmail.com>"]
edition = "2018"
description = "rust application which downloads wallpapers from reddit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tempfile = "3.1.0"
chrono = "0.4.19"
console = "0.14.1"
ansi_term = "0.12.1"
clap = "2.33.3"